switch to jdk 8 methods